# esp32-rust

./: Cargo.toml  README.md  rust-toolchain
.cargo/: config.toml
src/: main.rs  solution_publ.rs
